--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,13 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	background: rgb(96, 96, 96);
+	background: linear-gradient(
+		173deg,
+		rgba(96, 96, 96, 1) 0%,
+		rgba(168, 168, 168, 1) 52%,
+		rgba(218, 218, 218, 1) 100%
+	);
 }
 
 code {
