--- a/src/index.css
+++ b/src/index.css
@@ -7,16 +7,31 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background: rgb(96, 96, 96);
-	background: linear-gradient(
-		173deg,
-		rgba(96, 96, 96, 1) 0%,
-		rgba(168, 168, 168, 1) 52%,
-		rgba(218, 218, 218, 1) 100%
-	);
+	background: linear-gradient(-90deg, #a06060, #8b7575, #956b6b);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
 }
 
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
 		monospace;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	25% {
+		background-position: 50% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	75% {
+		background-position: 50% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
