--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,9 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background: linear-gradient(150deg, #355070 25%, #3d5c81 25%);
+	/* background: linear-gradient(150deg, #355070 25%, #3d5c81 25%);
 	background-size: 300% 300%;
-	height: 100vh;
+	height: 100vh; */
 }
 
 code {
@@ -18,7 +18,6 @@ code {
 }
 
 .textShadow {
-	text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
+	text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
 		0px 18px 23px rgba(0, 0, 0, 0.1);
 }
-
