--- a/src/index.css
+++ b/src/index.css
@@ -21,4 +21,5 @@ code {
 }
 
 .boxShadow {
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;}
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+}
